Changed paragraph and title

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My first github change</title>
+	<title>My second github change</title>
 </head>
 <body>
-	<p>Hello my name is Faine and I like C4</p>
+	<p>Hello my name is Faine</p>
 	<p>
-		Hello I like pie and biltong
+		
 	</p>
 
 </body>
