--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<p>Hello my name is Faine and I like C4</p>
 	<p>
 		Hello I like pie and biltong
+		helooo
+		goodbye
+		leave me
 	</p>
 
 </body>
